--- a/Lab3_SpellChecker/src/it/polito/tdp/spellchecker/controller/SpellChecker.fxml
+++ b/Lab3_SpellChecker/src/it/polito/tdp/spellchecker/controller/SpellChecker.fxml
@@ -1,7 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.spellchecker.controller.SpellCheckerController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane prefHeight="496.0" prefWidth="436.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.spellchecker.controller.SpellCheckerController">
+   <top>
+      <Label prefHeight="35.0" prefWidth="205.0" text="Lab3_SpellChecker" textFill="#cd1c1c" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+   </top>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="35.0" prefWidth="368.0">
+               <children>
+                  <Label text="Choose the language:">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <ComboBox fx:id="comboId" onAction="#chooseLanguage" prefWidth="150.0" />
+               </children>
+            </HBox>
+            <TextArea fx:id="textArea1" prefHeight="212.0" prefWidth="368.0" promptText="Inserisci parole">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin>
+            </TextArea>
+            <HBox prefHeight="44.0" prefWidth="368.0">
+               <children>
+                  <Button fx:id="buttonSpellCheck" contentDisplay="BOTTOM" mnemonicParsing="false" onAction="#doSpellCheck" text="Spell Check">
+                     <HBox.margin>
+                        <Insets left="340.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox prefHeight="46.0" prefWidth="368.0">
+               <children>
+                  <Label text="Wrong words">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="15.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <TextArea fx:id="textArea2" prefHeight="185.0" prefWidth="368.0">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin>
+            </TextArea>
+            <HBox prefHeight="108.0" prefWidth="436.0">
+               <children>
+                  <Label fx:id="textErrori" prefHeight="17.0" prefWidth="157.0" textFill="#da0d0d">
+                     <HBox.margin>
+                        <Insets left="190.0" top="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Button fx:id="buttonClearText" mnemonicParsing="false" onAction="#doClearText" text="Clear Text">
+                     <HBox.margin>
+                        <Insets left="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <Label fx:id="textSeconds" prefHeight="17.0" prefWidth="349.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" />
+               </VBox.margin>
+            </Label>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
